# robotis_manipulator

./: 99-manipulator-arm.rules
manipulator/: CMakeLists.txt  package.xml
manipulator_actions/: CMakeLists.txt  package.xml
manipulator_actions/action/: ControlTable.action  ControlTorque.action
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/launch/: manipulator_h.launch
manipulator_description/urdf/: common.xacro  manipulator_h.xacro  manipulator_h_arm.xacro  manipulator_h_robot.xacro  transmission.xacro
manipulator_driver/: CMakeLists.txt  package.xml
manipulator_driver/config/: manipulator_controllers.yaml  manipulator_h.yaml
manipulator_driver/include/: RobotisController.h  manipulator_driver.h  manipulator_hardware_interface.h  robot_state.h
manipulator_driver/include/device/: DXLPRO.h  GenericDevice.h  MX28.h  UNKNOWN.h
manipulator_driver/include/handler/: BulkReadData.h  GroupHandler.h  PacketHandler.h  PacketProtocol1.h  PacketProtocol2.h  PortHandler.h
manipulator_driver/launch/: manipulator_dual_arm.launch  manipulator_left_arm.launch  manipulator_right_arm.launch  manipulator_ros_control.launch  manipulator_ros_control_separate.launch  test.launch
manipulator_driver/scripts/: test_control_action.py  test_get_table_action.py  test_joint_trajectory_action.py
manipulator_driver/src/: RobotisController.cpp  manipulator_driver.cpp  manipulator_hardware_interface.cpp  manipulator_ros_wrapper.cpp  position_velocity_controller.cpp  robot_state.cpp
manipulator_driver/src/device/: GenericDevice.cpp
manipulator_driver/src/handler/: GroupHandler.cpp  PacketHandler.cpp  PacketProtocol1.cpp  PacketProtocol2.cpp  PortHandler.cpp
manipulator_gazebo/: CMakeLists.txt  package.xml
manipulator_gazebo/config/: arm_control.yaml  joint_names.yaml
manipulator_gazebo/launch/: controller_utils.launch  manipulator_h.launch  reload_model.launch
manipulator_msgs/: CMakeLists.txt  package.xml
manipulator_msgs/msg/: ControlTorque.msg  ControlWrite.msg  KeyValue.msg  PublishPosition.msg
manipulator_velocity/: CMakeLists.txt  package.xml  setup.py
manipulator_velocity/nodes/: twist.py
manipulator_velocity/src/manipulator_velocity/: velocity.py
robotis_manipulator_h/: CMakeLists.txt  package.xml
