<package>
  <name>robotis_manipulator_h</name>
  <version>0.0.1</version>
  <description>The robotis_manipulator_h package</description>
  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>manipulator_msgs</run_depend>
  <run_depend>manipulator_description</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
