<?xml version="1.0"?>
<package>
  <name>manipulator_actions</name>
  <version>0.0.1</version>
  <description>The manipulator actions package</description>

  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <build_depend>actionlib_msgs</build_depend>
  <!-- <run_depend>message_runtime</run_depend> -->
  <run_depend>actionlib_msgs</run_depend>

</package>
