<?xml version="1.0"?>
<package>
  <name>manipulator_description</name>
  <version>0.1.0</version>
  <description>
      URDF description for Manipulator H robot arms
  </description>

  <author email="nikhilkalige@gmail.com">Nikhil Kalige</author>
  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
