<?xml version="1.0"?>
<package>
  <name>manipulator_driver</name>
  <version>0.0.1</version>
  <description>
    Manipulator-h driver package
  </description>
  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>manipulator_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>manipulator_msgs</run_depend>
  <!-- <run_depend>ur_description</run_depend> -->
  <run_depend>tf</run_depend>

  <export></export>
</package>
