<?xml version="1.0"?>
<package>
  <name>manipulator_gazebo</name>
  <version>0.1.0</version>
  <description>
      Gazebo wrapper for the Universal UR5/10 robot arms.
  </description>

  <author email="nikhilkalige@gmail.com">Nikhil Kalige</author>
  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>manipulator_description</run_depend>

  <export>
  </export>
</package>
