<?xml version="1.0"?>
<package>
  <name>manipulator_msgs</name>
  <version>0.0.1</version>
  <description>The manipulator messages package</description>

  <maintainer email="nikhilkalige@gmail.com">Nikhil Kalige</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
